# sdl2

./: BUILD.bazel  WORKSPACE
include/: SDL_config.h  SDL_config_ubuntu.h
src/audio/: BUILD.bazel
src/audio/alsa/: BUILD.bazel
src/audio/dsp/: BUILD.bazel
src/audio/pulseaudio/: BUILD.bazel
src/audio/sndio/: BUILD.bazel
src/core/: BUILD.bazel
src/core/linux/: BUILD.bazel
src/dynapi/: BUILD.bazel  SDL_dynapi.h
src/events/: BUILD.bazel
src/haptic/: BUILD.bazel
src/haptic/linux/: BUILD.bazel
src/hidapi/: BUILD.bazel
src/hidapi/mac/: BUILD.bazel
src/joystick/linux/: BUILD.bazel
src/joystick/steam/: BUILD.bazel
src/loadso/: BUILD.bazel
src/power/: BUILD.bazel
src/power/linux/: BUILD.bazel
src/thread/: BUILD.bazel
src/thread/generic/: BUILD.bazel
src/thread/pthread/: BUILD.bazel
src/video/: BUILD.bazel
src/video/wayland/: BUILD.bazel
src/video/x11/: BUILD.bazel
