load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "power",
	alwayslink = True,
	srcs = glob(["*.c"]),
	deps = [
			":headers",
			"//:SDL2internal",
			"//src/dynapi:dynapi",
		] + select({
		"//:windows": [
			"//src/power/windows:windows",
		],
		"//:macos": [
			"//src/power/macosx:macosx",
		],
		"//conditions:default": [
			"//src/power/linux:linux",
		],
	}),
	visibility = ["//visibility:public"],
)

cc_library(
	name = "headers",
	hdrs = ["SDL_syspower.h"],
	visibility = ["//visibility:public"],
)