load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "thread",
	hdrs = glob(["*.h"]),
	srcs = glob(["*.c"]),
	deps = [
		"//:SDL2internal",
	] + select({
		"//:windows": [
			"//src/thread/windows:windows",
			"//src/thread/generic:syscond",
		],
		"//:linux": [
			"//src/thread/pthread:pthread",
		],
		"//:macos": [
			"//src/thread/pthread:pthread",
		],
	}),
	visibility = ["//visibility:public"],
)

cc_library(
	name = "headers",
	hdrs = glob(["*.h"]),
	visibility = ["//visibility:public"],
)
