load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "pulseaudio",
	hdrs = glob(["**/*.h"]),
	srcs = glob(["**/*.c"]),
	deps = [
		"//:SDL2internal",
		"//src/audio:headers",
		"//src/thread:headers",
		"//src/thread/pthread:headers",
		"//src/dynapi:dynapi",
	],
	visibility = ["//:__subpackages__"],
)
